--- a/index.html
+++ b/index.html
@@ -83,19 +83,6 @@
         </div>
     </section>
 
-    <!-- Customer Reviews -->
-    <section class="bg-rose-600 pt-10 h-60 mt-36 sm:pt-20 sm:h-72 md:h-96">
-        <div class="flex bg-rose-500 mx-20 h-44 rounded-3xl md:h-64 md:mx-24 lg:h-72">
-            <div class="w-3/5 ml-5 my-auto pt-8 pr-8 md:ml-10 lg:ml-32">
-                <h1 class="text-white font-sans text-xl font-bold tracking-widest md:text-3xl">Design Website</h1>
-                <h1 class="text-white font-sans text-xl font-bold tracking-widest md:text-3xl">For You!</h1>
-                <p class="text-gray-200 text-xs my-2 sm:text-sm sm:my-2 md:pr-5 md:my-3 md:text-base lg:my-4 lg:text-lg">Lorem ipsum, rerum id eius molestiae placeat expedita nulla, praesentium non, eligendi porro sapiente maxime!</p>
-            </div>
-            <div class="w-2/5 pr-5 pt-3 sm:pr-8 md:pt-5 lg:pt-7">
-                <img class="rounded-2xl h-40 md:h-56 lg:h-60" src="online.png" alt="">
-            </div>
-        </div>    
-    </section>
     
     <!-- Cards -->
     <section class="pt-20 lg:pt-36">
@@ -125,7 +112,7 @@
 
 
     <!-- form -->
-    <section class="text-gray-600 body-font relative" id="contact">
+    <section class="text-gray-600 body-font" id="contact">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
           <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Us</h1>
@@ -134,19 +121,19 @@
         <div class="lg:w-1/2 md:w-2/3 mx-auto">
           <div class="flex flex-wrap -m-2">
             <div class="p-2 w-1/2">
-              <div class="relative">
+              <div class="">
                 <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
                 <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-rose-600 focus:bg-white focus:ring-2 focus:ring-rose-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
             </div>
             <div class="p-2 w-1/2">
-              <div class="relative">
+              <div class="">
                 <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
                 <input type="email" id="email" name="email" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-rose-500 focus:bg-white focus:ring-2 focus:ring-rose-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
             </div>
             <div class="p-2 w-full">
-              <div class="relative">
+              <div class="">
                 <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
                 <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-rose-500 focus:bg-white focus:ring-2 focus:ring-rose-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
               </div>
@@ -190,17 +177,6 @@
 
     <!-- Footer -->
     <footer class="text-white bg-blue-800 mt-32 pt-6">
-
-        <div class="flex ml-10 md:ml-14 lg:ml-20">
-            <h1 class="text-white mt-2 font-sans text-xl font-bold text-center tracking-widest md:mt-1 md:text-3xl"> Stay in the Hackspot</h1>
-            <div class="flex ml-auto mr-5">
-                    <input class="rounded-l-lg pl-4 py-3" type="text" placeholder="Search">
-                    <button class="bg-rose-600 hover:bg-rose-700 text-white text-center px-7 rounded-r-lg">Search</button>
-            </div>
-        </div>
-
-        <hr class="mb-10 mt-5">
-
         <div class="container px-5 py-10 mx-auto flex flex-wrap flex-col md:items-center lg:items-start md:flex-row md:flex-nowrap">
           <div class="w-60 flex-shrink-0 md:mx-0 m-auto text-center md:text-left">
             <a class="flex title-font font-medium items-center md:justify-start justify-center">
