--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="text-white bg-blue-800 mt-32 pt-6">
+    <footer class="text-white bg-blue-800 pt-6">
         <div class="container px-5 py-10 mx-auto flex flex-wrap flex-col md:items-center lg:items-start md:flex-row md:flex-nowrap">
           <div class="w-60 flex-shrink-0 md:mx-0 m-auto text-center md:text-left">
             <a class="flex title-font font-medium items-center md:justify-start justify-center">
