--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       </header>
 
     <!-- carosel -->
-    <section class="h-2/4 flex ml-10 pt-40 md:ml-20 md:pt-32 lg:pt-40 xl:pt-44">
-        <div class="ml-2 pt-7 w-2/6 sm:ml-4 sm:pt-10 md:ml-3">
-            <h1 class="font-sans text-xl font-bold tracking-widest sm:text-2xl md:text-3xl">We Design</h1>
-            <h1 class="font-sans text-xl font-bold tracking-widest sm:text-2xl md:text-3xl">Beautiful Web</h1>
-            <h1 class="font-sans text-xl font-bold tracking-widest sm:text-2xl md:text-3xl">Sites that!</h1>
-            <p class="text-slate-700 text-xs my-1 sm:text-sm sm:my-2 md:my-3 md:text-base lg:my-4 lg:text-lg">Lorem ipsum istinctio ab eligendi dignissimos possimus culpa? Voluptates autem, rerum id eius molestiae placeat expedita nulla, praesentium non, eligendi porro sapiente maxime!</p>
+    <section class="h-2/4 flex ml-5 pt-40 md:ml-20 md:pt-32 lg:pt-40 xl:pt-44">
+        <div class="pt-7 w-2/6 sm:ml-4 sm:pt-10 md:ml-3">
+            <h1 class="font-sans text-base font-bold tracking-widest sm:text-2xl md:text-3xl">We Design</h1>
+            <h1 class="font-sans text-base font-bold tracking-widest sm:text-2xl md:text-3xl">Beautiful Web</h1>
+            <h1 class="font-sans text-base font-bold tracking-widest sm:text-2xl md:text-3xl">Sites that!</h1>
+            <p class="text-slate-700 text-xs my-1 sm:text-sm sm:my-2 md:my-3 md:text-base lg:my-4 lg:text-lg">Lorem ipsum istinctio ab eligendi dignissimos possimus culpa? Voluptates autem, rerum id eius!</p>
             <div class="flex space-x-3 pt-3">
-                <button class="bg-rose-600 hover:bg-rose-700 text-white tracking-widest px-10 py-2 text-base rounded-3xl">Submit</button>
+                <button class="bg-rose-600 hover:bg-rose-700 font-bold text-white tracking-widest px-10 py-2 text-base rounded-3xl">Submit</button>
             </div>
         </div>
         <div class="w-2/4 m-auto">
