--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
 
     <!-- carosel -->
-    <section class="h-2/4 flex ml-5 pt-40 md:ml-20 md:pt-32 lg:pt-40 xl:pt-44">
+    <section class="h-2/4 flex ml-5 pt-48 md:ml-20 md:pt-32 lg:pt-40 xl:pt-44">
         <div class="pt-7 w-2/6 sm:ml-4 sm:pt-10 md:ml-3">
             <h1 class="font-sans text-base font-bold tracking-widest sm:text-2xl md:text-3xl">We Design</h1>
             <h1 class="font-sans text-base font-bold tracking-widest sm:text-2xl md:text-3xl">Beautiful Web</h1>
@@ -116,7 +116,7 @@
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
           <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Us</h1>
-          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p>
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-sm">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p>
         </div>
         <div class="lg:w-1/2 md:w-2/3 mx-auto">
           <div class="flex flex-wrap -m-2">
