--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
 
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Python</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Python</a>
                 </li>
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">JavaScript</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">JavaScript</a>
                 </li>
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Next JS</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Next JS</a>
                 </li>
               </nav>
             </div>
@@ -211,13 +211,13 @@
               <h2 class="title-font font-medium tracking-widest text-base mb-3 md:text-xl">App Development</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Python</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Python</a>
                 </li>
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Django</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Django</a>
                 </li>
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Next JS</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Next JS</a>
                 </li>
               </nav>
             </div>
