--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
               <h2 class="title-font font-medium tracking-widest text-base mb-3 md:text-xl">Game Development</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">React Native</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">React Native</a>
                 </li>
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Flutter</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Flutter</a>
                 </li>
                 <li>
-                  <a class="text-gray-300 hover:text-gray-400 cursor-pointer">Unity 3d</a>
+                  <a class="text-gray-300 hover:text-gray-400 text-sm cursor-pointer">Unity 3d</a>
                 </li>
               </nav>
             </div>
